27 March 2014: Wouter
	- Fix delete or rename of a lot of zones and make it take a
	  non-enormous time.  Database compaction is deferred.

25 March 2014: Wouter
	- nsd shuts down during init process if given signal.
	- shorter logging for zone transfer fail rcodes.

24 March 2014: Wouter
	- include: "foo/nsd.d/*.conf" works, wildcard glob on includes.
	- Fix print filename of encompassing config file on read failure.

21 March 2014: Wouter
	- Fix bug in nodatabase mode with ixfrs that change nsec3param
	  (Thanks Anand Buddhdev).
	- Changed maxbackoff for no-content secondary zones from 4h to 24h.
	- nocontent zones are checked on startup, but continue backoff
	  from stored xfrd.state values.

19 March 2014: Wouter
	- made database: "" set the 3600 default for zonefileswrite only
	  if it is also at its default, so that user settings override.
	- Unit test for zonefiles-write.
	- Write xfrd.state for nodb mode again.  Disable xfrd.state with
	  xfrdfile: "" in config.  Does not check slave zone if state is
	  same as last time on startup.
	- Fixed shutdown message sporadically not printed on exit.
	- Documented zonefile %s syntax in nsd.conf man page.
	- Fix manpage to put colon after zonefiles check and write.
	- Change from 'Zone" to "zone" with ".. serial .. is updated" log
	  message.

18 March 2014: Wouter
	- unit test for nodb mode.
	- Speed up zone write (.nl zonefile 30% faster).
	  The memory alloc-dealloc in print_rr has been moved to print_rrs.
	- (from 3.2), fix for #553 and for other TXT string syntax.
	- in nodb mode, xfrd.state is not written out, because the zones
	  are refreshed upon next startup anyway, so keeping timers and state
	  is unnecessary.
	- zonefiles-write option in nsd.conf, enabled when database is "".
	  The server writes changed zonefiles to disk every hour.

17 March 2014: Wouter
	- Speed up zone parsing (.nl reads 40% faster).
	  The rrtype_from_string routine is called often, optimised it.

14 March 2014: Wouter
	- tag 4.0.3